--- a/requirements.txt
+++ b/requirements.txt
@@ -1,259 +1,5 @@
-absl-py==2.1.0
-aiohttp==3.9.5
-aiohttp-retry==2.8.3
-aiosignal==1.3.1
-altair==5.4.0
-annotated-types==0.6.0
-anyio==4.4.0
-apyori==1.1.2
-asttokens==2.4.1
-astunparse==1.6.3
-async-timeout==4.0.3
-attrs==23.2.0
-audioread==3.0.1
-bcrypt==4.2.0
-beautifulsoup4==4.12.3
-bidict==0.23.1
-blinker==1.8.2
-blis==0.7.11
-bokeh==3.4.1
-branca==0.7.2
-cachetools==5.3.3
-catalogue==2.0.10
-certifi==2024.2.2
-cffi==1.17.0
-charset-normalizer==3.3.2
-chefboost==0.0.17
-click==8.1.7
-cloudpathlib==0.16.0
-colorama==0.4.6
-comm==0.2.2
-comtypes==1.4.2
-confection==0.1.4
-contourpy==1.2.1
-cryptography==43.0.0
-cycler==0.12.1
-cymem==2.0.8
-dataclasses-json==0.6.7
-debugpy==1.8.1
-decorator==5.1.1
-dialogflow==2.0.0
-distro==1.9.0
-docstring_parser==0.16
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
-et-xmlfile==1.1.0
-exceptiongroup==1.2.1
-executing==2.0.1
-fastjsonschema==2.19.1
-filelock==3.14.0
-Flask==3.0.3
-Flask-Bcrypt==1.0.1
-Flask-Cors==4.0.1
-Flask-Login==0.6.3
-Flask-Mail==0.10.0
-Flask-SocketIO==5.3.6
-Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.1
-flatbuffers==24.3.25
-folium==0.17.0
-fonttools==4.51.0
-fpdf==1.7.2
-frozenlist==1.4.1
-fsspec==2024.5.0
-fuzzywuzzy==0.18.0
-gast==0.6.0
-generativeai==0.0.1
-gitdb==4.0.11
-GitPython==3.1.43
-google-ai-generativelanguage==0.6.6
-google-api-core==1.34.1
-google-api-python-client==2.141.0
-google-auth==2.33.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.1
-google-cloud-aiplatform==1.51.0
-google-cloud-bigquery==3.23.0
-google-cloud-core==2.4.1
-google-cloud-resource-manager==1.12.3
-google-cloud-speech==2.26.0
-google-cloud-storage==2.14.0
-google-cloud-texttospeech==2.16.3
-google-crc32c==1.5.0
-google-generativeai==0.7.2
-google-pasta==0.2.0
-google-resumable-media==2.7.0
-googleapis-common-protos==1.63.0
-greenlet==3.0.3
-grpc-google-iam-v1==0.13.0
-grpcio==1.63.0
-grpcio-status==1.48.2
-h11==0.14.0
-h5py==3.11.0
-httpcore==1.0.5
-httplib2==0.22.0
-httpx==0.27.0
-huggingface-hub==0.24.5
-idna==3.7
-ipykernel==6.29.4
-ipython==8.24.0
-itsdangerous==2.2.0
-jedi==0.19.1
-Jinja2==3.1.4
-jiter==0.5.0
-joblib==1.4.2
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.22.0
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.1
-jupyter_core==5.7.2
-keras==3.4.1
-kiwisolver==1.4.5
-langchain==0.2.14
-langchain-community==0.2.12
-langchain-core==0.2.33
-langchain-text-splitters==0.2.2
-langcodes==3.4.0
-langsmith==0.1.99
-language_data==1.2.0
-lazy_loader==0.4
-libclang==18.1.1
-librosa==0.10.2.post1
-llvmlite==0.43.0
-marisa-trie==1.1.1
-Markdown==3.6
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.21.3
-matplotlib==3.8.4
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-ml-dtypes==0.4.0
-MouseInfo==0.1.3
-msgpack==1.0.8
-multidict==6.0.5
-murmurhash==1.0.10
-mypy-extensions==1.0.0
-namex==0.0.8
-narwhals==1.4.2
-nbformat==5.10.4
-nest-asyncio==1.6.0
-numba==0.60.0
-numpy==1.26.4
-oauthlib==3.2.2
-openai==1.41.0
-opencv-python==4.10.0.84
-openpyxl==3.1.2
-opt-einsum==3.3.0
-optree==0.12.1
-orjson==3.10.7
-packaging==24.0
-pandas==2.2.2
-parso==0.8.4
-pillow==10.3.0
-platformdirs==4.2.2
-plotly==5.22.0
-pooch==1.8.2
-preshed==3.0.9
-prompt-toolkit==3.0.43
-proto-plus==1.23.0
-protobuf==3.20.3
-psutil==5.9.8
-pure-eval==0.2.2
-pyarrow==17.0.0
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-PyAudio==0.2.14
-PyAutoGUI==0.9.54
-pycparser==2.22
-pydantic==2.7.1
-pydantic_core==2.18.2
-pydeck==0.9.1
-pydub==0.25.1
-PyGetWindow==0.0.9
-Pygments==2.18.0
-pyjokes==0.6.0
-PyJWT==2.8.0
-PyMsgBox==1.0.9
-pyparsing==3.1.2
-pyperclip==1.8.2
-pypiwin32==223
-PyRect==0.2.0
-PyScreeze==0.1.30
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-engineio==4.9.1
-python-http-client==3.3.7
-python-socketio==5.11.3
-pyttsx3==2.90
-pytweening==1.2.0
-pytz==2024.1
-pywhatkit==5.4
-pywin32==306
-PyYAML==6.0.1
-pyzmq==26.0.3
-referencing==0.35.1
-regex==2024.7.24
-requests==2.32.3
-requests-oauthlib==2.0.0
-rich==13.7.1
-rpds-py==0.18.1
-rsa==4.9
-safetensors==0.4.3
-scikit-learn==1.4.2
-scipy==1.13.0
-seaborn==0.13.2
-sendgrid==6.11.0
-shapely==2.0.4
-simple-websocket==1.0.0
-six==1.16.0
-smart-open==6.4.0
-smmap==5.0.1
-sniffio==1.3.1
-soundfile==0.12.1
-soupsieve==2.5
-soxr==0.4.0
-spacy==3.7.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SpeechRecognition==3.10.4
-SQLAlchemy==2.0.32
-squarify==0.4.3
-srsly==2.4.8
-stack-data==0.6.3
-starkbank-ecdsa==2.2.0
-streamlit==1.37.1
-tenacity==8.3.0
-tensorboard==2.17.0
-tensorboard-data-server==0.7.2
-tensorflow==2.17.0
-tensorflow-intel==2.17.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.4.0
-thinc==8.2.3
-threadpoolctl==3.5.0
-tokenizers==0.19.1
-toml==0.10.2
-tornado==6.4
-tqdm==4.66.4
-traitlets==5.14.3
-transformers==4.43.3
-twilio==9.0.5
-typer==0.9.4
-typing-inspect==0.9.0
-typing_extensions==4.11.0
-tzdata==2024.1
-uritemplate==4.1.1
-urllib3==2.2.1
-wasabi==1.1.2
-watchdog==4.0.2
-wcwidth==0.2.13
-weasel==0.3.4
-Werkzeug==3.0.3
-wikipedia==1.4.0
-wrapt==1.16.0
-wsproto==1.2.0
-WTForms==3.1.2
-xgboost==2.0.3
-xyzservices==2024.4.0
-yarl==1.9.4
+google-generativeai==0.1.0  # Replace with the actual version
+streamlit==1.24.0           # Replace with the actual version
+langchain==0.0.205          # Replace with the actual version
+openai==0.27.8              # Replace with the actual version
+python-dotenv==1.0.0        # Replace with the actual version
