--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-google-generativeai==0.1.0  # Replace with the actual version
-streamlit==1.24.0           # Replace with the actual version
-langchain==0.0.205          # Replace with the actual version
-openai==0.27.8              # Replace with the actual version
-python-dotenv==1.0.0        # Replace with the actual version
+google-generativeai
+streamlit
+langchain
